--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body onload="initializeMap()">
-    <h2>GeoJSON Lot Editor</h2>
+    <h2>irankis keisti zemelapi v2r</h2>
     <input type="file" id="fileInput" accept=".geojson" onchange="loadFile(event)">
     <button onclick="downloadGeoJSON()">Download Updated JSON</button>
     <div id="map"></div>
