--- a/admin.html
+++ b/admin.html
@@ -10,13 +10,14 @@
         #map { height: 60vh; width: 100%; }
         #editor { padding: 10px; }
 
-        /* 🔥 New: Style for lot ID labels */
+        /* 🔥 Updated: Smaller lot ID labels with normal font */
         .lot-label {
-            font-size: 10px;
-            font-weight: bold;
-            background: rgba(255, 255, 255, 0.7);
-            padding: 2px;
-            border-radius: 3px;
+            font-size: 9px; /* Smaller font */
+            font-weight: normal; /* No bold */
+            background: rgba(255, 255, 255, 0.6); /* Less intrusive white background */
+            padding: 1px 3px; /* Smaller padding */
+            border-radius: 2px;
+            border: 1px solid rgba(0, 0, 0, 0.2); /* Slight border for visibility */
         }
     </style>
 </head>
@@ -119,11 +120,11 @@
                         document.getElementById('lot-link').value = feature.properties.buy_link || ''; 
                     });
 
-                    // 🔥 New: Add Lot ID as a label on the map
+                    // 🔥 Updated: Add Lot ID as a smaller label on the map
                     let label = L.divIcon({
                         className: 'lot-label',
                         html: feature.properties.plot_id,
-                        iconSize: [20, 20] 
+                        iconSize: [15, 15] // Smaller size for less obstruction
                     });
                     L.marker(layer.getBounds().getCenter(), { icon: label }).addTo(map);
                 }
@@ -131,13 +132,15 @@
         }
 
         function getLotColor(status) {
+            if (!status || status.trim() === "") {
+                return "black"; // 🔥 Updated: Make unassigned lots black
+            }
             switch (status) {
                 case "For Sale": return "green";
                 case "Sold": return "red";
                 case "Reserved": return "yellow";
                 case "Not for Sale": return "grey";
-                case "Unassigned": return "black"; // 🔥 Changed from grey to black
-                default: return "grey";
+                default: return "black"; // 🔥 Default to black for any undefined status
             }
         }
 
