--- a/admin.html
+++ b/admin.html
@@ -10,12 +10,11 @@
         #map { height: 60vh; width: 100%; }
         #editor { padding: 10px; }
 
-        /* 🔥 Updated: Lot ID labels now have NO background, smaller font */
         .lot-label {
-            font-size: 8px; /* Smaller font */
-            font-weight: normal; /* No bold */
-            color: black; /* Ensure visibility on light backgrounds */
-            background: none; /* Remove background */
+            font-size: 8px;
+            font-weight: normal;
+            color: black;
+            background: none;
             padding: 0;
         }
     </style>
@@ -23,7 +22,7 @@
 <body onload="initializeMap()">
     <h2>GeoJSON Lot Editor</h2>
     <input type="file" id="fileInput" accept=".geojson" onchange="loadFile(event)">
-    <button onclick="downloadGeoJSON()">Download Updated JSON</button>
+    <button onclick="saveGeoJSONToSupabase()">💾 Save & Update Map</button>
     <div id="map"></div>
 
     <div id="editor" style="display:none;">
@@ -57,6 +56,10 @@
         let selectedLayer;
         let map;
 
+        const SUPABASE_URL = "https://poxxulxqzxwotequkwbw.supabase.co";
+        const SUPABASE_API_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBveHh1bHhxenh3b3RlcXVrd2J3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDAyNTYzNjcsImV4cCI6MjA1NTgzMjM2N30.Cf6EQFNFbnHjUdFzoC84L32F0yNyyxKku8CIELwVt0E";
+        const STORAGE_PATH = "geojson-files/lots.geojson";
+
         function initializeMap() {
             map = L.map('map').setView([11.575, -86.244], 16);
             let baseLayers = {
@@ -67,13 +70,13 @@
             };
             L.control.layers(baseLayers).addTo(map);
             
-            fetch("lots.geojson")
+            fetch(`${SUPABASE_URL}/storage/v1/object/public/${STORAGE_PATH}`)
                 .then(response => response.json())
                 .then(data => {
                     geojsonData = data;
                     loadGeoJSON();
                 })
-                .catch(error => console.error("Error loading default GeoJSON:", error));
+                .catch(error => console.error("Error loading GeoJSON from Supabase:", error));
         }
 
         function loadFile(event) {
@@ -118,7 +121,6 @@
                         document.getElementById('lot-link').value = feature.properties.buy_link || ''; 
                     });
 
-                    // 🔥 New: Add Lot ID as a label on the map (No background)
                     let label = L.divIcon({
                         className: 'lot-label',
                         html: feature.properties.plot_id,
@@ -135,12 +137,11 @@
                 case "Sold": return "red";
                 case "Reserved": return "yellow";
                 case "Not for Sale": return "grey";
-                case undefined: return "blue"; // 🔥 Changed: Unassigned lots are now blue
-                default: return "blue"; // 🔥 Changed: Default color is now blue for unassigned lots
+                case undefined: return "blue";
+                default: return "blue";
             }
         }
 
-        // 🔥 New: Auto-save changes when any field is modified
         function autoSave() {
             if (!selectedFeature) return;
             selectedFeature.properties.price = document.getElementById('lot-price').value;
@@ -151,16 +152,23 @@
             selectedFeature.properties.buy_link = document.getElementById('lot-link').value; 
         }
 
-        function downloadGeoJSON() {
-            const updatedGeoJSON = JSON.stringify(geojsonData, null, 4);
-            const blob = new Blob([updatedGeoJSON], { type: 'application/json' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'lots_updated.geojson';
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
+        async function saveGeoJSONToSupabase() {
+            const fileContent = new Blob([JSON.stringify(geojsonData, null, 4)], { type: "application/json" });
+
+            const response = await fetch(`${SUPABASE_URL}/storage/v1/object/public/${STORAGE_PATH}`, {
+                method: "PUT",
+                headers: {
+                    "Authorization": `Bearer ${SUPABASE_API_KEY}`,
+                    "Content-Type": "application/json"
+                },
+                body: fileContent
+            });
+
+            if (response.ok) {
+                alert("✅ GeoJSON Updated in Supabase!");
+            } else {
+                alert("❌ Failed to update GeoJSON.");
+            }
         }
     </script>
 </body>
