--- a/admin.html
+++ b/admin.html
@@ -9,11 +9,13 @@
     <style>
         #map { height: 60vh; width: 100%; }
         #editor { padding: 10px; }
+
+        /* 🔥 Updated: Lot ID labels now have NO background, smaller font */
         .lot-label {
-            font-size: 8px;
-            font-weight: normal;
-            color: black;
-            background: none;
+            font-size: 8px; /* Smaller font */
+            font-weight: normal; /* No bold */
+            color: black; /* Ensure visibility on light backgrounds */
+            background: none; /* Remove background */
             padding: 0;
         }
     </style>
@@ -21,7 +23,7 @@
 <body onload="initializeMap()">
     <h2>GeoJSON Lot Editor</h2>
     <input type="file" id="fileInput" accept=".geojson" onchange="loadFile(event)">
-    <button onclick="saveGeoJSONToSupabase()">💾 Save & Update Map</button>
+    <button onclick="downloadGeoJSON()">Download Updated JSON</button>
     <div id="map"></div>
 
     <div id="editor" style="display:none;">
@@ -55,11 +57,6 @@
         let selectedLayer;
         let map;
 
-        const SUPABASE_URL = "https://poxxulxqzxwotequkwbw.supabase.co";
-        const SUPABASE_API_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBveHh1bHhxenh3b3RlcXVrd2J3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDAyNTYzNjcsImV4cCI6MjA1NTgzMjM2N30.Cf6EQFNFbnHjUdFzoC84L32F0yNyyxKku8CIELwVt0E";
-        const STORAGE_BUCKET = "geojson-files";
-        const STORAGE_FILE = "lots.geojson";
-
         function initializeMap() {
             map = L.map('map').setView([11.575, -86.244], 16);
             let baseLayers = {
@@ -70,13 +67,13 @@
             };
             L.control.layers(baseLayers).addTo(map);
             
-            fetch(`${SUPABASE_URL}/storage/v1/object/public/${STORAGE_BUCKET}/${STORAGE_FILE}`)
+            fetch("lots.geojson")
                 .then(response => response.json())
                 .then(data => {
                     geojsonData = data;
                     loadGeoJSON();
                 })
-                .catch(error => console.error("Error loading GeoJSON from Supabase:", error));
+                .catch(error => console.error("Error loading default GeoJSON:", error));
         }
 
         function loadFile(event) {
@@ -121,6 +118,7 @@
                         document.getElementById('lot-link').value = feature.properties.buy_link || ''; 
                     });
 
+                    // 🔥 New: Add Lot ID as a label on the map (No background)
                     let label = L.divIcon({
                         className: 'lot-label',
                         html: feature.properties.plot_id,
@@ -137,11 +135,12 @@
                 case "Sold": return "red";
                 case "Reserved": return "yellow";
                 case "Not for Sale": return "grey";
-                case undefined: return "blue";
-                default: return "blue";
+                case undefined: return "blue"; // 🔥 Changed: Unassigned lots are now blue
+                default: return "blue"; // 🔥 Changed: Default color is now blue for unassigned lots
             }
         }
 
+        // 🔥 New: Auto-save changes when any field is modified
         function autoSave() {
             if (!selectedFeature) return;
             selectedFeature.properties.price = document.getElementById('lot-price').value;
@@ -152,24 +151,16 @@
             selectedFeature.properties.buy_link = document.getElementById('lot-link').value; 
         }
 
-        async function saveGeoJSONToSupabase() {
-            const fileContent = new Blob([JSON.stringify(geojsonData, null, 4)], { type: "application/json" });
-
-            const response = await fetch(`${SUPABASE_URL}/storage/v1/object/${STORAGE_BUCKET}/${STORAGE_FILE}`, {
-                method: "POST",
-                headers: {
-                    "Authorization": `Bearer ${SUPABASE_API_KEY}`,
-                    "x-upsert": "true"
-                },
-                body: fileContent
-            });
-
-            if (response.ok) {
-                alert("✅ GeoJSON Updated in Supabase!");
-            } else {
-                console.error("❌ Failed to update GeoJSON:", await response.text());
-                alert("❌ Failed to update GeoJSON.");
-            }
+        function downloadGeoJSON() {
+            const updatedGeoJSON = JSON.stringify(geojsonData, null, 4);
+            const blob = new Blob([updatedGeoJSON], { type: 'application/json' });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = 'lots_updated.geojson';
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
         }
     </script>
 </body>
